# be/src/routes/auth.ts
@@ -1,5 +1,6 @@
 import { NextFunction, Request, Response, Router } from 'express';
-import { loginAuth, verifyOTPRoutes } from '../handlers/auth';
+import { loginAuth, register, verifyOTPRoutes } from '../handlers/auth';
+import { UserCreate } from '../dtos/users';
 
 const router = Router();
 
@@ -22,5 +23,19 @@ router.post('/verify-otp', async (req: Request, res: Response, next: NextFunctio
     /* #swagger.tags = ['Auth'] */
     await verifyOTPRoutes(req, res, next);
 });
+
+router.post("/register", async (req: Request<{}, {}, UserCreate>, res: Response, next: NextFunction) => {
+    /* #swagger.tags = ['Auth']
+       #swagger.summary = 'Register user'
+       #swagger.requestBody = {
+           required: true,
+           content: {
+               "application/json": {
+                   schema: { $ref: '#/components/schemas/User' }
+               }
+           }
+       } */
+    await register(req, res, next);
+})
 
 export default router;
